# micro_rtos_cpp

./: CMakeLists.txt  README.md  main.cpp  main_sensor_demo.cpp
kernel/: message_queue.h  rtos.cpp  rtos.h  scheduler.cpp  scheduler.h  sensor_simulator.h  sync.h  task.cpp  task.h
